--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,10 @@ body,
   }
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
+
 .canvas-loader {
   font-size: 10px;
   width: 1em;
@@ -88,7 +92,7 @@ body,
   border-radius: 50%;
   position: relative;
   text-indent: -9999em;
-  animation: mulShdSpin 1.1s infinite ease;
+  animation: mulShdSpin 1.5s infinite ease;
   transform: translateZ(0);
 }
 
